Add rest of endpoints for accommodations
